# Hessian-Approximation-for-Toy-Models

./: .gitignore  README.md  analysis.ipynb  kfac.py  main.py  minimal_kfac.ipynb  plot_lds.ipynb  pyproject.toml  pytorch_jax_nn_geometry_comparison.ipynb
.github/workflows/: tests.yml
config/: config.py  dataset_config.py  hessian_approximation_config.py  training_config.py
data/: data.py  device_handling.py  jax_dataloader.py
deleuze/: __init__.py  __main__.py  config.py
deleuze/hessians/: collector.py
deleuze/hessians/approximator/: approximator.py  ekfac.py  fim.py  kfac.py
deleuze/hessians/computer/: computer.py  ekfac.py  hessian.py  kfac.py
deleuze/hessians/utils/: data.py  pseudo_gradients.py
deleuze/metrics/: vector_metrics.py
deleuze/models/: approximation_model.py  linear_model.py  mlp.py
deleuze/utils/: loss.py  optimizers.py  train.py
deleuze/utils/data/: data.py  jax_dataloader.py
experiments/: analysis.py  analyze_hessians.py  config_builder.py  hessian_analysis.py  hessian_analysis_top_k.py  lds.py  lds_analysis.py  new_run.sh  paths.py  plot_lds.ipynb  plot_results.py  plot_runs_db.ipynb  provenance.py  results.py  run.sh  run_all.sh  run_error_analysis.sh  run_full.sh  run_lds.sh  run_top_k.sh  run_train.sh  shared_models.yaml  train_models.py  train_models_top_k.py  utils.py
experiments/configs/: analysis.yaml  concrete_single_model.yaml  concrete_sweep.yaml  default_analysis.yaml  digits_sweep.yaml  energy_single_model.yaml  energy_sweep.yaml  hessian_analysis.yaml
experiments/datasets/concrete/: X.csv  metadata.json
experiments/datasets/digits/: metadata.json
experiments/datasets/energy/: X.csv  Y.csv  metadata.json
experiments/sweep_1/configs/: base_sweep.yaml  digits_sweep.yaml  energy_sweep.yaml  (+1 more)
hessian_approximations/: exact_hessian_regression.py  factory.py  fisher_information.py  gauss_newton.py  hessian.py  hessian_approximations.py  lissa.py
hessian_approximations/fim/: fisher_information.py
hessian_approximations/gauss_newton/: gauss_newton.py
hessian_approximations/hessian/: exact_hessian_regression.py  hessian.py
hessian_approximations/kfac/: activation_gradient_collector.py  data.py  kfac.py  layer_components.py  storage.py
hessian_approximations/lissa/: lissa.py
metrics/: full_matrix_metrics.py  metrics.py  vector_metrics.py
models/: base.py  linear_model.py  loss.py  mlp.py  models.py  train.py
models/dataclasses/: hessian_compute_context.py  hessian_jit_data.py  model_context.py  model_data.py
models/utils/: checkpoint_storage.py  loss.py  optimizers.py
scripts/: check_memory.py  check_memory_ihvp.py  metrics_check.py  run_gpu_tests.py  run_gpu_tests_vectors.py  simple_run.py
src/: __init__.py  __main__.py  config.py
src/config/: __init__.py  config.py  hessian_approximation_config.py  model_config.py
src/data/: data.py
src/hessian_approximations/: hessian_approximations.py
src/hessians/: collector.py  layer_matrix.py
src/metrics/: full_matrix_metrics.py
src/models/: base.py  linear_model.py  mlp.py  train.py
src/utils/: attribution.py  influence.py  lds.py  logging.py  loss.py  manifest.py  optimizers.py  train.py  utils.py
tests/: _helpers.py  conftest.py  lds_debug_analysis.py  pytorch_jax_nn_geometry_comparison.ipynb  test_block_fim.py  test_block_hessian.py  test_datasets.py  test_ekfac.py  test_ekfac_storage.py  test_fim.py  test_fim_gnh.py  test_hessian_gnh.py  test_jax_model.py  test_kfac_jax.py  test_layer_matrix.py  test_lds.py  test_lissa.py  test_metrics.py  test_regression_hessian_equals_gnh.py  test_shampoo.py
utils/: utils.py
(+79 files in other folders)
