[project]
name = "hessian-approximation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "flax>=0.12.0",
    "hydra-core>=1.3.2",
    "jax>=0.8.2",
    "jaxtyping>=0.3.3",
    "kfac-jax>=0.0.7",
    "matplotlib>=3.10.6",
    "omegaconf>=2.3.0",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.25",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "simple-parsing>=0.1.7",
    "tqdm>=4.67.1",
    "ucimlrepo>=0.0.7",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]>=0.8.2",
]

[tool.ruff.lint]
ignore = ["F722", "F821"]  # Ignore forward annotation syntax errors and undefined names

[tool.uv]
find-links = [
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
]
