[project]
name = "hessian-approximation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "curvlinops-for-pytorch>=3.0.1",
    "flax>=0.12.0",
    "hydra-core>=1.3.2",
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.6",
    "nngeometry>=0.4",
    "omegaconf>=2.3.0",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.25",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "simple-parsing>=0.1.7",
    "tqdm>=4.67.1",
    "ucimlrepo>=0.0.7",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.7",
    "jax>=0.8.2",
]
cuda = [
    "torch>=2.7; sys_platform == 'linux'",
    "jax[cuda12]>=0.8.2; sys_platform == 'linux'",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu126", extra = "cuda", marker = "sys_platform == 'linux'" },
    { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
ignore = ["F722", "F821"]
