[project]
name = "hessian-approximation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "curvlinops-for-pytorch>=3.0.1",
    "flax>=0.12.0",
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jax==0.8.2",  # pin: jax 0.9 ships CUDA 12.9 which needs driver R570+; 0.8 ships CUDA 12.6, works on R535
    "jaxtyping>=0.3.3",
    "matplotlib>=3.10.6",
    "omegaconf>=2.3.0",
    "optax>=0.2.6",
    "orbax-checkpoint>=0.11.25",
    "pytest>=8.4.2",
    "scikit-learn>=1.7.2",
    "simple-parsing>=0.1.7",
    "torch",  # CPU-only build; see [tool.uv.sources] — keeps GPU stack JAX-only
    "tqdm>=4.67.1",
    "ucimlrepo>=0.0.7",
]

[project.optional-dependencies]
cuda = [
    "jax[cuda12]==0.8.2",
]

[tool.ruff.lint]
ignore = ["F722", "F821"]  # Ignore forward annotation syntax errors and undefined names

[tool.uv]
find-links = [
    "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
]

# Force torch (and only torch) to come from the CPU wheel index. This avoids the
# CUDA 13 libs that recent torch wheels on PyPI bundle, which conflict with the
# CUDA 12 stack JAX uses and require driver versions older A40 hosts may lack.
[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
